[package]
name = "tcp-channel"
version = "0.3.1"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
description = "SPSC channels, working on everything that implements Read and Write"
readme = "README.md"
license = "MIT"
repository = "https://github.com/4lDO2/tcp-channel"
keywords = ["spsc", "channel"]
documentation = "https://docs.rs/tcp-channel"
categories = ["network-programming"]

[dependencies]
bincode = "1.1.2"
byteorder = "1.3.1"
serde = "1.0.89"
quick-error = "1.2.2"

[dev-dependencies]
rand = "0.6.5"
serde_derive = "1.0.89"
