[package]
name = "tcp-channel"
version = "0.3.2"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
description = "SPSC channels, working on everything that implements Read and Write"
readme = "README.md"
license = "MIT"
repository = "https://github.com/4lDO2/tcp-channel"
keywords = ["spsc", "channel"]
documentation = "https://docs.rs/tcp-channel"
categories = ["network-programming"]

[dependencies]
bincode = "^1.3.3"
byteorder = "^1.4.3"
serde = "^1.0.183"
quick-error = "^2.0.1"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
serde_derive = "1.0.183"
