[package]
name = "examples"
version = "0.3.1"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
publish = false

[[example]]
name = "greeting-client"
path = "src/greeting-client.rs"

[[example]]
name = "greeting-server"
path = "src/greeting-server.rs"

[dependencies]
tcp-channel = { path = "..", version = "0.3.1" }
serde = "1.0.89"
serde_derive = "1.0.89"
